[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/ui.gd" type="Script" id=1]
[ext_resource path="res://Items/Inventory/LeadersInventories.gd" type="Script" id=2]
[ext_resource path="res://Items/Shop/Shop.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.192157, 0.188235, 0.223529, 1 )

[node name="ui" type="CanvasLayer"]
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "Prevents ui panning"
}

[node name="top_left" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fps" type="Label" parent="top_left"]
visible = false
margin_left = 2.0
margin_top = 2.0
margin_right = 62.0
margin_bottom = 34.0
text = "fps
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top_mid" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5

[node name="Shop" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 4 )
script = ExtResource( 3 )

[node name="ScrollContainer" type="ScrollContainer" parent="Shop"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -50.0

[node name="VBoxContainer" type="VBoxContainer" parent="Shop/ScrollContainer"]
margin_right = 580.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="HSeparator" type="HSeparator" parent="Shop/ScrollContainer/VBoxContainer"]
margin_top = 238.0
margin_right = 580.0
margin_bottom = 242.0

[node name="Label" type="Label" parent="Shop/ScrollContainer/VBoxContainer"]
margin_top = 246.0
margin_right = 580.0
margin_bottom = 260.0
text = "Equip"

[node name="EquipItems" type="HBoxContainer" parent="Shop/ScrollContainer/VBoxContainer"]
margin_top = 264.0
margin_right = 580.0
margin_bottom = 264.0
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="Shop/ScrollContainer/VBoxContainer"]
margin_top = 268.0
margin_right = 580.0
margin_bottom = 272.0

[node name="Label2" type="Label" parent="Shop/ScrollContainer/VBoxContainer"]
margin_top = 276.0
margin_right = 580.0
margin_bottom = 290.0
text = "Consumable"

[node name="ConsumableItems" type="HBoxContainer" parent="Shop/ScrollContainer/VBoxContainer"]
margin_top = 294.0
margin_right = 580.0
margin_bottom = 294.0
size_flags_horizontal = 3

[node name="HSeparator3" type="HSeparator" parent="Shop/ScrollContainer/VBoxContainer"]
margin_top = 298.0
margin_right = 580.0
margin_bottom = 302.0

[node name="top_right" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="top_right"]
anchor_right = 1.0
margin_left = -55.0
margin_bottom = 40.0
alignment = 2

[node name="ShopButton" type="Button" parent="top_right/VBoxContainer"]
margin_top = 2.0
margin_right = 55.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 11
text = "shop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoldLabel" type="Label" parent="top_right/VBoxContainer"]
margin_top = 26.0
margin_right = 55.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0.94902, 0.772549, 0.0705882, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "1"
align = 2

[node name="mid_left" type="Control" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5

[node name="mid" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mid_right" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bot_left" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="minimap" type="Node2D" parent="bot_left"]
visible = false

[node name="panel" type="ItemList" parent="bot_left/minimap"]
margin_top = -150.0
margin_right = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sprite" type="Sprite" parent="bot_left/minimap"]
position = Vector2( 75, -75 )
scale = Vector2( 0.24, 0.24 )

[node name="symbols" type="Node2D" parent="bot_left/minimap"]
position = Vector2( 0, -6.10352e-05 )

[node name="bot_mid" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stats" type="ItemList" parent="bot_mid"]
visible = false
margin_left = -120.0
margin_top = -80.0
margin_right = 120.0
max_columns = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="bot_mid/stats"]
margin_left = 88.0
margin_top = 8.0
margin_right = 119.0
margin_bottom = 22.0
text = "stats"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vision" type="Label" parent="bot_mid/stats"]
margin_left = 88.0
margin_top = 24.0
margin_right = 119.0
margin_bottom = 38.0
text = "stats"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="damage" type="Label" parent="bot_mid/stats"]
margin_left = 88.0
margin_top = 40.0
margin_right = 119.0
margin_bottom = 54.0
text = "stats"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="speed" type="Label" parent="bot_mid/stats"]
margin_left = 88.0
margin_top = 56.0
margin_right = 119.0
margin_bottom = 70.0
text = "stats"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="portrait" type="Control" parent="bot_mid/stats"]
margin_left = 8.0
margin_top = 8.0
margin_right = 72.0
margin_bottom = 72.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sprite" type="Sprite" parent="bot_mid/stats/portrait"]
position = Vector2( 32, 32 )
scale = Vector2( 2, 2 )
region_enabled = true

[node name="bot_right" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LeadersInventories" type="HBoxContainer" parent="bot_right"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -144.0
margin_top = -44.0
size_flags_vertical = 8
script = ExtResource( 2 )
